Fix too long description on community page

--- a/src/scss/pages/_community.scss
+++ b/src/scss/pages/_community.scss
@@ -174,10 +174,6 @@
     .person:hover & {
         opacity: 1;
     }
-
-    &__small {
-      font-size: 90%;
-    }
 }
 
 //Dołącz do nas section
